[project]
name = "apar-parser"
version = "1.0.0"
description = "Parse IBM APAR information from web pages"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "apar-parser contributors"}
]
keywords = ["ibm", "apar", "parser", "mainframe"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
apar-parser = "apar_parser:main"

[project.optional-dependencies]
gui = ["tk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
